assets/css/blog.css
/* Main Content */
.blog-content-wrapper {
    /*z-index: 1;*/
    /*position: relative;*/
}

.blog-content--inner a:not(.btn, .title-link) {
    text-decoration: underline;
}

.blog-content--inner .title {
    margin-bottom: 26px;
}

.blog-content--inner .title .post-title-is-post {
    font-size: 34px;
    margin-bottom: 0;
}

.blog-content--inner .title .meta {
    color: #999;
    margin-top: 5px;
}

.blog-content--inner-article {
    clear: both;
}

.blog-content--inner-article blockquote {
    position: relative;
    border-left-color: #F36;
    font-style: italic;
    padding-top: 30px;
    line-height: 1.5;
    font-size: 15px;
    margin-top: 18px;
}

.blog-content--inner-article blockquote:before {
    content: '\201C';
    font-family: Arial;
    font-size: 75px;
    font-style: normal;
    position: absolute;
    top: -27px;
    height: 120px;
    color: #F36;
}

.blog-content--comments {
    margin-top: 40px;
}

/* Adjust vertical spacing for the first heading inside a section.page-posts */
.page-posts > h2:first-child {
    margin-top: 0;
}

.page-posts--article + .page-posts--article {
    margin-top: 20px;
}

.page-posts--article .heading {
    margin-bottom: 0;
}

.page-posts--article .excerpt {
    font-size: 15px;
    line-height: 1.6;
}

/* Other */
.meta {
    font-size: 14px;
    margin-top: 10px;
}

.meta span:not(:last-child):after {
    content: '/'; /* Post breadcrumb separator */
    padding: 0 4px;
}

/* Small devices (tablets, 768px and up) */
@media (min-width: 768px) {
    .blog-content-wrapper {
        margin-bottom: 25px;
    }
}

